# SiameseEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/configs/: sengine.ini
libs/SiameseEditor/: CMakeLists.txt
libs/SiameseEditor/include/: Editor.h
libs/SiameseEditor/src/: Editor.cpp
libs/SiameseEngine/: CMakeLists.txt
libs/SiameseEngine/include/: Application.h  EntryPoint.h  sepch.h
libs/SiameseEngine/include/components/: Component.h  Identity.h  Renderable.h  Transform.h  TransformComp.h
libs/SiameseEngine/include/core/: Clock.h  Core.h  CrashHandler.h  Log.h  UUID.h  Utils.h
libs/SiameseEngine/include/graphics/: DeviceManager.h  IRenderPass.h  RenderGraph.h  RetainedResourceRegistry.h
libs/SiameseEngine/include/input/: InputCodes.h  InputManager.h
libs/SiameseEngine/include/managers/: EntityManager.h
libs/SiameseEngine/include/memory/: MemoryManager.h  MemoryPool.h  SiameseAllocator.h
libs/SiameseEngine/include/modules/: Module.h
libs/SiameseEngine/include/window/: Window.h
libs/SiameseEngine/src/: Application.cpp  sepch.h
libs/SiameseEngine/src/components/: Component.cpp  Identity.cpp  Renderable.cpp  Transform.cpp  TransformComp.cpp
libs/SiameseEngine/src/core/: Clock.cpp  CrashHandler.cpp  Log.cpp  UUID.cpp  Utils.cpp
libs/SiameseEngine/src/graphics/: DeviceManager.cpp  RenderGraph.cpp
libs/SiameseEngine/src/input/: InputManager.cpp
libs/SiameseEngine/src/managers/: EntityManager.cpp
libs/SiameseEngine/src/memory/: MemoryManager.cpp  MemoryPool.cpp  SiameseAllocator.cpp
libs/SiameseEngine/src/modules/: Module.cpp
libs/SiameseEngine/src/window/: Window.cpp
libs/SiameseRenderer/: CMakeLists.txt
libs/SiameseRenderer/include/: Renderer.h
libs/SiameseRenderer/src/: Renderer.cpp
libs/shared/window/: Window.cpp  Window.h
